--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "asar": "^0.11.0",
     "chai": "^3.5.0",
     "chai-subset": "^1.5.0",
-    "electron": "1.6.16",
-    "electron-packager": "^7.0.3",
-    "electron-rebuild": "^1.5.7",
+    "electron": "3.0.3",
+    "electron-packager": "^12.2.0",
+    "electron-rebuild": "^1.8.2",
     "eslint": "^4.16.0",
-    "grunt": "^1.0.0",
+    "grunt": "^1.0.3",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.1",
-    "mocha": "^2.5.3",
-    "nodemon": "^1.9.2",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4",
     "sinon": "^1.17.4"
   },
   "dependencies": {
     "JSONStream": "^1.3.1",
     "packageurl-js": "0.0.1",
-    "sequelize": "^3.30.2",
-    "sequelize-cli": "^2.5.1",
-    "sqlite3": "3.1.13"
+    "sequelize": "^4.39.0",
+    "sequelize-cli": "^4.1.1",
+    "sqlite3": "^4.0.2"
   }
 }
