--- a/package.json
+++ b/package.json
@@ -30,103 +30,101 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.1.1",
-    "@electron-forge/maker-deb": "^6.1.1",
-    "@electron-forge/maker-rpm": "^6.1.1",
-    "@electron-forge/maker-squirrel": "^6.1.1",
-    "@electron-forge/maker-zip": "^6.1.1",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.1.1",
-    "@electron-forge/plugin-webpack": "^6.1.1",
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@svgr/webpack": "^6.4.0",
-    "@types/c3": "^0.7.8",
-    "@types/d3": "^7.4.0",
-    "@types/diff-match-patch": "^1.0.32",
-    "@types/jest": "^29.5.3",
-    "@types/jquery": "^3.5.14",
-    "@types/node": "^18.16.19",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-scroll": "^1.8.7",
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+    "@electron-forge/plugin-webpack": "^6.4.2",
+    "@electron/rebuild": "^3.3.0",
+    "@electron/universal": "^1.4.2",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@svgr/webpack": "^8.1.0",
+    "@types/c3": "^0.7.10",
+    "@types/d3": "^7.4.2",
+    "@types/diff-match-patch": "^1.0.35",
+    "@types/jest": "^29.5.6",
+    "@types/jquery": "^3.5.25",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-scroll": "^1.8.9",
     "@types/react-toastify": "^4.1.0",
-    "@types/sequelize": "^4.28.14",
-    "@types/sqlite3": "^3.1.8",
-    "@types/validator": "^13.7.7",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@types/sequelize": "^4.28.17",
+    "@types/sqlite3": "^3.1.10",
+    "@types/validator": "^13.11.5",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "asar": "^3.2.0",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "electron": "^24.1.1",
-    "electron-builder": "^23.3.3",
-    "electron-packager": "^16.0.0",
-    "electron-rebuild": "^3.2.9",
-    "eslint": "^8.24.0",
+    "css-loader": "^6.8.1",
+    "electron": "^27.0.2",
+    "electron-builder": "^24.6.4",
+    "electron-packager": "^17.1.2",
+    "eslint": "^8.52.0",
     "eslint-plugin-css-import-order": "^1.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "eslint-plugin-import": "^2.29.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "husky": "^8.0.3",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "json-loader": "^0.5.7",
     "native-ext-loader": "^2.3.0",
     "node-loader": "^2.0.0",
-    "react-scripts": "^5.0.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.3",
     "svg-url-loader": "^8.0.0",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.8.4"
+    "typescript": "~5.2.2"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.8",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@electron/remote": "^2.0.12",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mapbox/node-pre-gyp": "^1.0.10",
-    "@microlink/react-json-view": "^1.22.2",
-    "ag-grid-community": "^28.1.1",
-    "ag-grid-react": "^28.1.1",
-    "allotment": "^1.17.0",
-    "aws-sdk": "^2.1358.0",
-    "bootstrap": "^5.2.1",
+    "@mapbox/node-pre-gyp": "^1.0.11",
+    "@microlink/react-json-view": "^1.23.0",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-react": "^30.2.0",
+    "allotment": "^1.19.3",
+    "aws-sdk": "^2.1484.0",
+    "bootstrap": "^5.3.2",
     "c3": "^0.7.20",
-    "chart.js": "^4.3.0",
+    "chart.js": "^4.4.0",
     "diff-match-patch": "^1.0.5",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.6.1",
+    "jquery": "^3.7.1",
     "JSONStream": "^1.3.5",
-    "license-expressions": "^0.6.0",
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.29.4",
-    "nock": "^13.3.0",
-    "pg": "^8.10.0",
+    "nock": "^13.3.7",
+    "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "rc-tree": "^5.7.12",
+    "rc-tree": "^5.8.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^5.3.4",
-    "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^6.4.1",
-    "react-scroll": "^1.8.9",
-    "react-select": "^5.7.3",
-    "react-toastify": "^9.0.8",
-    "react-tooltip": "^5.10.4",
+    "react-loader-spinner": "^5.4.5",
+    "react-pro-sidebar": "0.7.1",
+    "react-router-dom": "^6.17.0",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.7.7",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.6",
     "scroll-into-view-if-needed": "^3.1.0",
-    "sequelize": "^6.23.2",
-    "sequelize-cli": "^6.5.1",
+    "sequelize": "^6.33.0",
+    "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6",
-    "url": "^0.11.0",
-    "url-loader": "^4.1.1",
-    "util": "^0.12.4"
+    "url": "^0.11.3",
+    "url-loader": "^4.1.1"
   },
   "config": {
     "forge": {
