--- a/package.json
+++ b/package.json
@@ -31,37 +31,24 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
-    "@electron/rebuild": "^3.3.0",
-    "@electron/universal": "^1.4.2",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@svgr/webpack": "^8.1.0",
     "@types/c3": "^0.7.10",
     "@types/d3": "^7.4.2",
     "@types/diff-match-patch": "^1.0.35",
     "@types/jest": "^29.5.6",
-    "@types/jquery": "^3.5.25",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-scroll": "^1.8.9",
-    "@types/react-toastify": "^4.1.0",
     "@types/sequelize": "^4.28.17",
     "@types/sqlite3": "^3.1.10",
-    "@types/validator": "^13.11.5",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "asar": "^3.2.0",
-    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "electron": "^27.0.2",
-    "electron-builder": "^24.6.4",
     "electron-packager": "^17.1.2",
     "eslint": "^8.52.0",
     "eslint-plugin-css-import-order": "^1.1.0",
@@ -69,19 +56,14 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "json-loader": "^0.5.7",
-    "native-ext-loader": "^2.3.0",
     "node-loader": "^2.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^3.3.3",
-    "svg-url-loader": "^8.0.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
-    "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.12",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -100,12 +82,10 @@
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.7.1",
     "JSONStream": "^1.3.5",
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.29.4",
-    "nock": "^13.3.7",
-    "pg": "^8.11.3",
+    "nock": "^13.3.8",
     "pg-hstore": "^2.3.4",
     "rc-tree": "^5.8.2",
     "react": "^18.2.0",
@@ -121,10 +101,11 @@
     "react-tooltip": "^5.21.6",
     "scroll-into-view-if-needed": "^3.1.0",
     "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6",
-    "url": "^0.11.3",
     "url-loader": "^4.1.1"
+  },
+  "overrides": {
+    "d3-color": "3.1.0"
   },
   "config": {
     "forge": {
@@ -132,28 +113,6 @@
         "name": "ScanCode Workbench",
         "icon": "src/assets/app-icon/icon"
       },
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "ScanCode Workbench"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ],
       "plugins": [
         {
           "name": "@electron-forge/plugin-webpack",
